# gdshelpers

./: pyproject.toml
gdshelpers/geometry/: chip.py  shapely_adapter.py
gdshelpers/parts/: port.py  splitter.py
