[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "gdsHelpers"
dynamic = ["version"]
authors = [
    {name = "Helge Gehring", email = "helge.gehring@uni-muenster.de"},
    {name = "Matthias Blaicher"},
    {name = "Wladick Hartmann"},
    {name = "Wolfram Pernice"},
]
description = "A simple Python package for creating or reading GDSII/OASIS layout files."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.5"
license = {text = "LGPLv3"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
    "matplotlib",
    "numpy",
    "shapely",
    "scipy",
    "klayout",
]
[project.urls]
Documentation = "https://gdshelpers.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/cuenluee/gdshelpers"

[project.optional-dependencies]
gdspy_export = ["gdspy>=1.3.1"]
gdscad_export = ["gdscad"]
oasis_export = ["fatamorgana"]
dxf_export = ["ezdxf"]
image_import = ["imageio"]
image_export = ["descartes"]
mesh_export = ["trimesh"]
fdtd_simulation = ["meep"]


[tool.setuptools]
packages = ["gdshelpers"]
